<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_bringup</name>
  <version>0.0.0</version>
  <description>This package were create to launch properly and simultanously all needs (nodes, ...) for the project</description>
  <maintainer email="soglolandry06@gmail.com">Landry</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>slambot_description</exec_depend>
  <exec_depend>slambot_diff_drive</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
